remove z-index to prevent breaking with mobile styles

--- a/core/css/apps.css
+++ b/core/css/apps.css
@@ -180,7 +180,6 @@
     top: 0;
     right: 0;
     bottom: 0;
-    z-index: 105;
 }
 
     #app-navigation .app-navigation-entry-utils ul {
@@ -246,7 +245,6 @@
     color: #333;
     border-radius: 3px;
     border-top-right-radius: 0px;
-    z-index: 110;
     margin: -5px 14px 5px 10px;
     right: 0;
     border: 1px solid #bbb;
@@ -362,7 +360,6 @@
 	position: fixed;
 	width: 250px; /* change to 100% when layout positions are absolute */
 	bottom: 0;
-	z-index: 140;
 }
 #app-settings.opened #app-settings-content {
 	display: block;
